--- a/client/package.json
+++ b/client/package.json
@@ -18,8 +18,10 @@
     "antd": "^5.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-slick": "^0.29.0",
-    "sass": "^1.62.1"
+    "sass": "^1.62.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
