--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "antd": "^5.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.9.0",
     "react-rating-stars-component": "^2.2.0",
     "react-slick": "^0.29.0",
     "sass": "^1.62.1",
