--- a/client/package.json
+++ b/client/package.json
@@ -15,12 +15,15 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.3",
     "@mui/styled-engine": "^5.13.2",
+    "@tippyjs/react": "^4.2.6",
     "antd": "^5.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-rating-stars-component": "^2.2.0",
+    "react-router-dom": "^6.13.0",
     "react-slick": "^0.29.0",
+    "react-tippy": "^1.4.0",
     "sass": "^1.62.1",
     "slick-carousel": "^1.8.1"
   },
